# KasmVNCPlus

./: .clang-format  .gitignore  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  dev_session_start.sh  novnc_recorder.yaml  oauth.toml  pytest.ini
.ci/: detect_os_arch_package_format
KasmVNC/oauth/include/: jwks_cache.h  jwt_validator.h  oauth_config.h  oauth_handler.h  pkce_helper.h  session_manager.h  websocket_auth.h
KasmVNC/oauth/src/: jwks_cache.cpp  jwt_validator.cpp  oauth_config.cpp  oauth_handler.cpp  pkce_helper.cpp  session_manager.cpp  websocket_auth.cpp
admin-dashboard/pages/: audit.html  dashboard.html  images.html  login.html  policies.html  recordings.html  sessions.html  settings.html  users.html
builder/: dockerfile.alpine.barebones.apk.test  dockerfile.opensuse_15.barebones.rpm.test  dockerfile.opensuse_15.rpm.build  dockerfile.ubuntu_jammy.dev
builder/scripts/: build-deps.sh  build-fmt  build-webp
common/rdr/: types.h
common/rfb/: ConnParams.cxx  ConnParams.h  EncodeManager.cxx  EncodeManager.h  Encoder.h  HextileEncoder.cxx  HextileEncoder.h  RREEncoder.cxx  RREEncoder.h  RawEncoder.cxx  RawEncoder.h  SMsgHandler.h  SMsgWriter.cxx  SMsgWriter.h  ScreenSet.h  TightEncoder.cxx  TightEncoder.h  TightJPEGEncoder.cxx  TightJPEGEncoder.h  TightQOIEncoder.cxx  TightQOIEncoder.h  TightWEBPEncoder.cxx  TightWEBPEncoder.h  VNCSConnectionST.cxx  VNCSConnectionST.h  VNCServerST.cxx  VNCServerST.h  ZRLEEncoder.cxx  ZRLEEncoder.h  clipboardTypes.h  encodings.cxx  encodings.h  ffmpeg.cxx  msgTypes.h
common/rfb/benchmark/: benchmark.cxx
common/rfb/encoders/: EncoderConfiguration.cpp  KasmVideoConstants.h  KasmVideoEncoders.h  SupportedVideoEncoders.h
docker/: Dockerfile.plus  chromium-policies.json  debian-chromium-pin  entrypoint.sh  kasmvnc.yaml  novnc_recorder.toml  record-session.sh
docker/oauth.toml/: kasmvnc-oauth.toml
helm/kasmvnc-plus/: Chart.yaml  values.yaml
helm/kasmvnc-plus/templates/: controller.yaml  scaling.yaml  session.yaml
novnc_recorder/: Cargo.toml  README.md  config.yaml  setup_environment.sh
novnc_recorder/src/: cli.rs  config.rs  ffmpeg.rs  file_utils.rs  lib.rs  main.rs  recorder.rs  screen_capture.rs  types.rs
oauth/: Cargo.toml
oauth/src/: config.rs  error.rs  handler.rs  jwks.rs  jwt.rs  lib.rs  main.rs  pkce.rs  session.rs  websocket.rs
oauth/tests/: jwt_test.rs  oauth_flow.rs
session-controller/: Cargo.toml  Dockerfile  controller-test.toml  controller.toml
session-controller/migrations/: 001_initial.sql  002_profiles_and_registry.sql
session-controller/src/: auth.rs  config.rs  error.rs  main.rs
session-controller/src/api/: audit.rs  images.rs  mod.rs  policies.rs  profiles.rs  recordings.rs  sessions.rs  settings.rs
src/: config.rs  lib.rs  main.rs  recorder.rs
src/oauth/: config.rs  handlers.rs  jwt.rs  mod.rs  pkce.rs  session.rs
tests/: command.rs  config.rs  conftest.py  integration.rs  oauth_integration.rs  run.rs  run_all.sh  test_api.py  test_browser.py  test_session_controller.py
unix/: kasmvnc_defaults.yaml
unix/xserver/hw/vnc/: Makefile.am  XserverDesktop.h  vncExtInit.cc
