[package]
name = "novnc_recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.30", features = ["signal"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
async-oidc-jwt-validator = "0.1.2"
axum = { version = "0.7", features = ["ws", "macros"] }
tokio-tungstenite = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1.0"
serde_json = "1.0"
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
