[workspace]
members = ["oauth", "novnc_recorder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KasmVNC Team"]
license = "GPL-3.0"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.30", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
serde_yaml = "0.9"