[package]
name = "novnc_recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.30", features = ["signal"] }

[dev-dependencies]
tempfile = "3"