[package]
name = "kasmvnc-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JWT handling
jsonwebtoken = "9.2"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cookies
cookie = { version = "0.18", features = ["percent-encode"] }

# Cryptography
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"
percent-encoding = "2.3"

# Async traits
async-trait = "0.1"

# Cache
moka = { version = "0.12", features = ["future"] }

# Environment variables
dotenv = "0.15"
regex = "1.10"

[dev-dependencies]
# Testing
mockito = "1.2"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }

[[bin]]
name = "kasmvnc-oauth-server"
path = "src/main.rs"