[package]
name = "kasmvnc-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OpenID Connect (replaces hand-rolled jwt, jwks, pkce, handler)
openidconnect = { version = "3", features = ["reqwest"] }

# HTTP client (for reverse proxy to KasmVNC)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }

# WebSocket proxy (upstream client to KasmVNC)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Session
cookie = "0.18"
uuid = { version = "1.6", features = ["v4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "kasmvnc-oauth-server"
path = "src/main.rs"