[package]
name = "kasmvnc-session-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Kubernetes client
kube = { version = "0.97", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Auth / JWT
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "kasmvnc-session-controller"
path = "src/main.rs"
